--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-dompdf": "^0.8.1",
+        "barryvdh/laravel-snappy": "^0.4.0",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1.0",
-        "niklasravnsborg/laravel-pdf": "^1.5",
         "uxweb/sweet-alert": "^1.4"
     },
     "require-dev": {
