Add .evn variables

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,9 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+WKHTMLTOPDF_BINARY_PATH=
+WKHTMKTOPDF_TIMEOUT=
+
+MEMORY_LIMIT=
+MAX_EXECUTION_TIME=
